apache-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-proxy-svc
  labels:
    app: apache-proxy
spec:
  ports:
  - name: port81
    port: 81
    targetPort: 8080
  - name: port9443
    port: 9443
    targetPort: 8443
  selector:
    app: apache-proxy
    tier: frontend
  type: LoadBalancer
