apache-proxy-route-ssl.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: apache-proxy
  name: apache-https
  namespace: ubuntu-test
spec:
  host: apache-https.ubuntu.local
  port:
    targetPort: port81
  tls:
    caCertificate: |
      -----BEGIN CERTIFICATE-----
      MIID+jCCAuKgAwIBAgIJALjRtA8q9K1JMA0GCSqGSIb3DQEBCwUAMFoxCzAJBgNV
[...]
      xUrZglZYLRSg4q7Hj8s=
      -----END CERTIFICATE-----
    certificate: |
      Certificate:
          Data:
              Version: 3 (0x2)
              Serial Number: 5970 (0x1752)
          Signature Algorithm: sha256WithRSAEncryption
              Issuer: C=US, ST=Washington, L=Seattle, O=getaCert - www.getacert.com
              Validity
                  Not Before: Jun  9 10:58:34 2021 GMT
                  Not After : Aug  8 10:58:34 2021 GMT
              Subject: C=IT, ST=Italy, L=Rome, O=ubuntu.local, OU=ubuntu.local, CN=apache-https.ubuntu.local
              Subject Public Key Info:
                  Public Key Algorithm: rsaEncryption
                      Public-Key: (2048 bit)
                      Modulus:
                          00:d4:fe:9a:73:55:62:55:e8:e1:e1:8e:4f:71:db:
                          5e:47:e0:7b:8c:30:cd:31:78:c4:0f:2d:09:74:2f:
                          66:98:99:7d:5e:50:71:f3:e4:fe:9b:90:36:24:1f:
                          eb:9a:fd:57:26:26:30:68:b8:2c:a2:a5:7a:80:72:
                          f2:cd:94:9b:e9:21:a3:ac:49:1c:cc:a2:9a:af:54:
                          74:ad:4e:22:5f:2c:ae:1d:0c:fb:21:29:1b:43:95:
                          1d:af:c7:f5:ac:38:13:07:e0:22:f0:e3:f6:f9:74:
                          ee:df:03:94:89:c5:47:d7:45:1d:2d:35:bd:01:44:
                          d7:c1:3e:97:b4:df:96:f7:c7:61:84:a0:60:d4:7e:
                          a9:9b:1e:1b:3c:db:68:26:94:ea:6f:a3:45:b3:50:
                          7a:66:24:bc:f4:54:03:fd:5c:08:fc:00:cb:b9:96:
                          09:6c:e7:7a:19:e5:d6:00:7a:a2:43:1f:64:80:a2:
                          82:92:95:83:fc:b5:75:31:92:4a:fd:d7:2c:31:85:
                          4d:30:24:32:fe:67:5d:71:aa:93:9c:79:33:9f:f3:
                          c1:9c:54:ce:e6:3f:0a:32:78:f5:c3:55:ae:2f:eb:
                          58:9a:bc:02:b8:49:a6:5c:33:7b:40:73:8d:3c:2e:
                          12:b9:21:d3:24:7c:11:45:d8:1a:62:8c:c9:e7:9b:
                          f4:b9
                      Exponent: 65537 (0x10001)
              X509v3 extensions:
                  X509v3 Basic Constraints: 
                      CA:FALSE
                  Netscape Cert Type: 
                      SSL Client, SSL Server, S/MIME, Object Signing
                  X509v3 Key Usage: 
                      Digital Signature, Key Encipherment
                  X509v3 Extended Key Usage: 
                      TLS Web Client Authentication, TLS Web Server Authentication
          Signature Algorithm: sha256WithRSAEncryption
               3d:92:2f:15:9c:82:1c:50:28:f8:a7:0c:a3:d8:b7:02:56:65:
               11:9f:ed:85:b9:2a:11:4c:06:62:bd:f1:b4:74:c0:53:81:97:
               4c:f6:7f:6e:12:22:a1:2d:b7:74:ed:5d:c5:8f:02:41:76:d3:
               7f:47:c7:27:a3:62:92:cb:eb:2c:16:cd:4e:40:3e:2e:4b:3b:
               03:2d:30:13:27:50:be:12:3d:84:58:87:84:a7:16:bd:23:cc:
               55:73:1b:35:5b:13:df:6f:ab:46:0e:08:15:46:11:4a:f4:e9:
               09:48:f9:3c:b6:f6:0b:a0:59:5d:90:80:b6:c8:08:d7:2c:1d:
               e1:2d:8a:69:61:9a:67:3f:89:19:49:00:68:58:a0:c3:82:40:
               04:b1:d0:80:5c:9a:33:46:d0:a8:e6:8c:43:64:ca:1b:4e:20:
               c6:ba:b6:b3:7b:0f:f2:7d:4e:fe:73:62:c7:8a:6d:97:0d:ee:
               6a:1c:a5:01:bc:d7:f4:1e:52:c0:18:f2:61:32:f7:f0:2d:9d:
               10:e7:5d:00:ec:1c:bb:22:84:c1:fb:95:8d:c2:f3:31:42:1f:
               6d:b2:21:f7:cc:0a:8e:6a:b4:ae:79:cd:21:ce:d2:3e:ea:45:
               85:d7:e4:7d:87:1f:0d:6a:31:8d:23:87:13:17:65:4c:ff:1a:
               fe:81:d5:5d
      -----BEGIN CERTIFICATE-----
      MIIDoDCCAoigAwIBAgICF1IwDQYJKoZIhvcNAQELBQAwWjELMAkGA1UEBhMCVVMx
[...]
      5H2HHw1qMY0jhxMXZUz/Gv6B1V0=
      -----END CERTIFICATE-----
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDU/ppzVWJV6OHh
[...]
      g+QVobBaTlWRDvyzFWAgUgs=
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: apache-proxy-svc
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      host: apache-https.ubuntu.local
      routerName: router
      wildcardPolicy: None
